fix visibility

--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ section {
 }
 
 .match {
+  visibility: hidden;
   position: absolute;
   top: 50%;
   left: 50%;
